--- a/StoryQuest/package.json
+++ b/StoryQuest/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "aac-speech-recognition": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "firebase": "^10.14.1",
     "framer-motion": "^12.5.0",
